fix: menu z-index

--- a/assets/styles/eveBook/MenuModule/style.less
+++ b/assets/styles/eveBook/MenuModule/style.less
@@ -7,6 +7,7 @@
 	vertical-align: top;
 	width: 0;
 	position: absolute;top: 0; right: 0;
+	z-index: 3;
 	nav{
 		height: 100%;
 		opacity: 0;
